<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Contact">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/banner"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="9dp"
                android:layout_marginRight="9dp"
                android:gravity="center_horizontal"
                android:text="Contact Us"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="409dp"
                android:layout_height="130dp"
                android:layout_below="@id/textView3"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/logoo" />

            <TextView
                android:id="@+id/con1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/imageView3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="61dp"
                android:padding="10dp"
                android:text="@string/con1"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="279dp" />

            <TextView
                android:id="@+id/con2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/con1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/con2"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="279dp" />

            <TextView
                android:id="@+id/con3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/con2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/con3"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="279dp" />

            <TextView
                android:id="@+id/con4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/con3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/con4"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="279dp" />

            <TextView
                android:id="@+id/con5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/con5"
                android:layout_below="@+id/con4"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="279dp" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="379dp"

                android:layout_height="180dp"
                android:layout_below="@+id/con5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
